# raytracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  aabb.hpp  camera.cpp  camera.hpp  circular_buffer.hpp  color.cpp  color.hpp  def.hpp  file.cpp  file.hpp  file_writer.cpp  handy.cpp  handy.hpp  hittable.hpp  hittable_list.hpp  integrator.hpp  interval.hpp  main.cpp  material.hpp  primitive.hpp  ray.hpp  render.hpp  shader.hpp  sphere.hpp  transform.hpp  util.hpp  vec3.hpp  window.cpp  window.hpp
src/gpu/: CMakeLists.txt  buffer.cpp  buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  extension.cpp  extension.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  gpu.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  layer.cpp  layer.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  renderpass.cpp  renderpass.hpp  semaphore.cpp  semaphore.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swap_chain.cpp  swap_chain.hpp
src/shaders/: CMakeLists.txt  base_vert.vert  compile.sh
test/: CMakeLists.txt  test.cpp  test_circular_buffer.cpp
